--- a/media.css
+++ b/media.css
@@ -34,7 +34,7 @@
     height: 100vh;
     width: 40vw;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     background-color: var(--default-background);
     padding: 0 1vw;
   }
@@ -83,42 +83,65 @@
     color: var(--secondary-color);
   }
 
-  .hero-info-frame{
+  .hero-info-frame {
     width: 100%;
     position: absolute;
     top: 60%;
     left: 60%;
     transform: translate(-50%, -50%);
   }
-  
-  .hero-title{
+
+  .hero-title {
     font-weight: 300;
     font-size: 9vw;
     line-height: 1;
   }
-  
-  .hero-mini{
+
+  .hero-mini {
     margin-top: 3vw;
     width: 58%;
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  
-  .hero-subtitle{
+
+  .hero-subtitle {
     width: 69%;
     font-weight: 300;
     font-size: 2vw;
   }
-  
-  .btn--cta{
-    padding: .7vw 2.5vw;
+
+  .btn--cta {
+    padding: 0.7vw 2.5vw;
     border-radius: 100px;
     background-color: var(--default-background);
     color: var(--btn-color);
   }
-}
 
+  .sec2-binding .text-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2vw;
+    padding: 2vw;
+    margin: 8vw 0 0 7vw;
+  }
+
+  .subtitle--main {
+    text-transform: uppercase;
+    font-size: 1.5vw;
+    color: var(--primary-color);
+  }
+
+  .sec2-binding .text-container h1 {
+    color: var(--border-background);
+    font-size: 5.5vw;
+    font-weight: 300;
+    line-height: 6vw;
+    letter-spacing: -2px;
+  }
+}
 @media only screen and (max-width: 425px) {
   .navbar {
     background-color: transparent;
@@ -146,11 +169,153 @@
   #sidebar {
     overflow: hidden;
     top: 15vh;
-    right: 100%;
+    right: -100%;
     height: calc(100vh - 15vh);
     width: 100vw;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
+    background-color: var(--default-background);
+    padding: 0 1vw;
+  }
+
+  .sidebar-binding {
+    height: 100%;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  .sidebar-binding .sdbr-badge {
+    width: fit-content;
+    display: none;
+  }
+
+  .sidebar-binding .sdbr-top {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .sidebar-binding .sdbr-top a {
+    width: fit-content;
+    font-size: 10vw;
+    font-weight: 300;
+    color: var(--secondary-color);
+  }
+
+  .sidebar-binding .sdbr-bottom {
+    display: flex;
+    width: 70%;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .sidebar-binding .sdbr-bottom a {
+    font-size: 2.5vw;
+    color: var(--secondary-color);
+  }
+
+  .hero-info-frame {
+    width: 100%;
+    position: absolute;
+    top: 60%;
+    left: 60%;
+    transform: translate(-50%, -50%);
+  }
+
+  .hero-title {
+    font-weight: 300;
+    font-size: 13vw;
+    line-height: 1;
+  }
+
+  .hero-mini {
+    margin-top: 3vw;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 2vw;
+  }
+
+  .hero-subtitle {
+    width: 69%;
+    font-weight: 300;
+    font-size: 3vw;
+  }
+
+  .btn--cta {
+    padding: 1vw 4.5vw;
+    border-radius: 100px;
+    background-color: var(--default-background);
+    color: var(--btn-color);
+  }
+
+  #sec2 {
+    min-height: 40vh;
+    background-color: red;
+  }
+
+  .subtitle--main {
+    font-size: 2vw;
+  }
+
+  .sec2-binding .text-container h1 {
+    color: var(--border-background);
+    font-size: 6.5vw;
+    font-weight: 300;
+    line-height: 8vw;
+    letter-spacing: -2px;
+  }
+
+  .sec2-binding .text-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2vw;
+    padding: 2vw;
+    margin: 8vw 0 0 0vw;
+  }
+}
+@media only screen and (max-width: 320px) {
+  .navbar {
+    background-color: transparent;
+    z-index: 2;
+    height: 15vh;
+  }
+
+  .btn-def {
+    font-size: 3.5vw;
+    text-align: center;
+    padding: 2vw 5vw;
+  }
+
+  .menu-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1vw 8vw;
+  }
+
+  .slice {
+    width: 40%;
+  }
+
+  #sidebar {
+    overflow: hidden;
+    top: 15vh;
+    right: -100%;
+    height: calc(100vh - 15vh);
+    width: 100vw;
+    position: fixed;
+    z-index: 3;
     background-color: var(--default-background);
     padding: 0 1vw;
   }
@@ -198,22 +363,29 @@
     color: var(--secondary-color);
   }
 
+  .sec1-binding {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
-  .hero-info-frame{
+  .hero-info-frame {
     width: 100%;
     position: absolute;
     top: 60%;
-    left: 60%;
+    left: 55%;
     transform: translate(-50%, -50%);
   }
-  
-  .hero-title{
+
+  .hero-title {
     font-weight: 300;
     font-size: 13vw;
     line-height: 1;
   }
-  
-  .hero-mini{
+
+  .hero-mini {
     margin-top: 3vw;
     width: 100%;
     display: flex;
@@ -222,17 +394,52 @@
     flex-direction: column;
     gap: 2vw;
   }
-  
-  .hero-subtitle{
+
+  .hero-subtitle {
     width: 69%;
     font-weight: 300;
     font-size: 3vw;
   }
-  
-  .btn--cta{
-    padding: 1vw 4.5vw;
+
+  .btn--cta {
+    padding: 2vw 5.5vw;
     border-radius: 100px;
     background-color: var(--default-background);
+    font-size: 3.5vw;
     color: var(--btn-color);
+  }
+
+  #sec2 {
+    min-height: 35vh;
+  }
+
+  .sec2-binding {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .subtitle--main {
+    font-size: 3vw;
+  }
+
+  .sec2-binding .text-container h1 {
+    color: var(--border-background);
+    font-size: 8.5vw;
+    font-weight: 300;
+    line-height: 10vw;
+    letter-spacing: -2px;
+  }
+
+  .sec2-binding .text-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2vw;
+    padding: 2vw;
+    margin: 8vw 0 0 0vw;
   }
 }
