--- a/style.css
+++ b/style.css
@@ -3,12 +3,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: jvar;
-  color: var(--primary-color);
 }
 
 :root {
   /* backgrounds */
-  --primary-background: #0a3cce;
+  --primary-background: #1437D0;
   --secondary-background: #02268e;
   --default-background: #ffffff;
   --rare-background: #0f0f17;
@@ -19,7 +18,7 @@
   --btn-color: #0a3cce;
   /* font sizes */
   --btn-font-size: 1vw;
-  --subtitle-font-size: 1.4vw;
+  --subtitle-font-size: 1.2vw;
 }
 
 html,
@@ -36,6 +35,7 @@ body {
   overflow-x: hidden;
   position: relative;
   background-color: var(--primary-background);
+  background-attachment: fixed;
 }
 
 @font-face {
@@ -52,15 +52,18 @@ body {
 }
 /* multi elem class styles */
 .navbar {
+  background-color: transparent;
   width: 100%;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1vw 4.5vw;
-  position: fixed;
+  position: absolute;
   top: 0;
-  z-index: 2;
+  /* position: relative; */
+  z-index: 9;
+  color: var(--primary-color);
 }
 
 .nav-deff {
@@ -78,7 +81,7 @@ body {
 }
 
 .menu-icon {
-  padding: 1vw 2vw;
+  padding: 1.1vw 2vw;
   border: 1px solid var(--border-background);
   border-radius: 100px;
   font-size: 1vw;
@@ -89,7 +92,7 @@ body {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  z-index: 3;
+  z-index: 4;
   background-color: transparent;
 }
 
@@ -98,7 +101,7 @@ body {
 }
 
 .slice {
-  width: 40%;
+  width: 30%;
   height: 1.5px;
   position: absolute;
   transition: transform 0.4s ease, top 0.4s ease;
@@ -129,7 +132,7 @@ body {
   height: 100vh;
   width: 40vw;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   background-color: var(--default-background);
   padding: 0 1vw;
 }
@@ -186,9 +189,10 @@ body {
   width: 100vw;
   position: relative;
   overflow: hidden;
+  color: var(--primary-color);
 }
 
-#sec1 video{
+#sec1 video {
   height: 100%;
   width: 100%;
   position: absolute;
@@ -198,26 +202,29 @@ body {
   z-index: 1;
 }
 
-.sec1-binding{
+.sec1-binding {
   width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 2;
 }
 
-.hero-info-frame{
+.hero-info-frame {
   width: fit-content;
   position: absolute;
   z-index: 2;
-  top: 60%;
+  top: 65%;
   left: 40%;
   transform: translate(-50%, -50%);
 }
 
-.hero-title{
+.hero-title {
   font-weight: 300;
   font-size: 7vw;
   line-height: 1;
 }
 
-.hero-mini{
+.hero-mini {
   margin-top: 3vw;
   width: 68%;
   display: flex;
@@ -225,16 +232,16 @@ body {
   justify-content: space-between;
 }
 
-.hero-subtitle{
+.hero-subtitle {
   width: 69%;
   font-weight: 300;
-  font-size: var(--subtitle-font-size);
+  font-size: 1.4vw;
 }
 
 .btn--cta {
   display: inline-block;
   /* border: 1px solid var(--default-background); */
-  padding: .7vw 2.5vw;
+  padding: 0.7vw 2.5vw;
   background-color: white;
   border-radius: 100px;
   transition: all 0.2s ease-in;
@@ -268,7 +275,7 @@ body {
   top: 180%;
   width: 160%;
   height: 190%;
-  background-color: var(--primary-background);
+  background-color: var(--rare-background);
   border-radius: 50%;
   display: block;
   transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
@@ -282,13 +289,64 @@ body {
 
 .btn--cta:hover:before {
   top: -35%;
-  background-color: var(--primary-background);
+  background-color: var(--rare-background);
   transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
 .btn--cta:hover:after {
   top: -45%;
-  background-color: var(--primary-background);
+  background-color: var(--rare-background);
   transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
 
+#sec2 {
+  min-height: 60vh;
+  width: 100vw;
+  position: relative;
+  overflow-x: hidden;
+}
+
+.sec2-binding {
+  width: 100%;
+}
+
+.sec2-binding .text-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2vw;
+  padding: 2vw;
+  margin: 8vw 0 0 7vw;
+}
+
+.subtitle--main {
+  text-transform: uppercase;
+  font-size: var(--subtitle-font-size);
+  color: var(--primary-color);
+}
+
+.sec2-binding .text-container h1 {
+  color: var(--border-background);
+  font-size: 4.5vw;
+  font-weight: 300;
+  line-height: 5vw;
+  letter-spacing: -2px;
+}
+
+#sec3 {
+  min-height: 100vh;
+  width: 100vw;
+  position: relative;
+}
+
+#sec3 > canvas {
+  min-height: 100vh;
+  min-width: 100vw;
+  position: relative;
+}
+
+
+::-webkit-scrollbar {
+  display: none;
+}
